--- a/src/generics/NavButton/styles.module.scss
+++ b/src/generics/NavButton/styles.module.scss
@@ -10,8 +10,8 @@
 
     cursor: pointer;
 
-    &:first-child {
-        margin-left: 30px;
+    &:last-child {
+        margin-right: 200px;
     }
 
     @media (min-width: 1281px) {
